--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 cryptography==2.1.4
-boto==2.48.0
-airflow==1.8.0
-airflow[celery]==1.8.0
-airflow[crypto]==1.8.0
-airflow[postgres]==1.8.0
-airflow[rabbitmq]==1.8.0
+boto3==1.5.33
+apache-airflow==1.9.0
+apache-airflow[celery]==1.9.0
+apache-airflow[crypto]==1.9.0
+apache-airflow[postgres]==1.9.0
+apache-airflow[rabbitmq]==1.9.0
