--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-cryptography==2.1.4
-boto3==1.5.33
 apache-airflow==1.9.0
 apache-airflow[celery]==1.9.0
 apache-airflow[crypto]==1.9.0
 apache-airflow[postgres]==1.9.0
 apache-airflow[rabbitmq]==1.9.0
+boto3==1.5.33
+cryptography==2.1.4
+psycopg2-binary==2.7.4
