--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    volumes:
+      - ./dags:/usr/src/app/dags
+      - ./logs:/usr/src/app/logs
     ports:
       - 8080:8080
