--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,9 +16,10 @@ COPY . .
 # Run the following commands
 ENV AIRFLOW_HOME=/usr/src/app
 ENV APP=COLORADO
-RUN python config/configure_airflow.cfg.py
+ARG GOOGLE_CLIENT_ID
+ARG GOOGLE_CLIENT_SECRET
+RUN python config/configure_airflow.cfg.py && python config/customize_dashboard.py
 RUN airflow initdb
-RUN python config/customize_dashboard.py
 
 # EXPOSE port to be used
 EXPOSE 8080
