--- a/airflow.cfg
+++ b/airflow.cfg
@@ -176,7 +176,14 @@ expose_config = False
 
 # Set to true to turn on authentication:
 # http://pythonhosted.org/airflow/security.html#web-authentication
-authenticate = False
+authenticate = True
+auth_backend = airflow.contrib.auth.backends.google_auth
+
+[google]
+client_id = #GOOGLE_CLIENT_ID#
+client_secret = #GOOGLE_CLIENT_SECRET#
+oauth_callback_route = /oauth2callback
+domain = brighthive.io
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
