--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ apache-airflow[crypto]==1.9.0
 apache-airflow[postgres]==1.9.0
 apache-airflow[rabbitmq]==1.9.0
 psycopg2-binary==2.7.4
+flask_oauthlib==0.9.4
